applications/dashboard/design/style.css
/* ... */
body#dashboard_entry_password div.Methods,
body#dashboard_entry_signin div.Methods,
body#dashboard_entry_index div.Methods {
	padding: 10px 6px 6px;
	background: none;
}
div.Methods div.Method {
	padding: 10px 0 0;
	text-align: left;
}

/* Handshake */
body#dashboard_entry_handshake #Content {
	width: 720px;
}
body#dashboard_entry_handshake #Content form {
	padding: 20px 30px 26px;
}
body#dashboard_entry_handshake ul.NewAccount {
	float: left;
	width: 315px;
	margin-right: 44px;
	border-right: 1px solid #A5D0E7;
}
body#dashboard_entry_handshake ul.LinkAccount {
	margin-left: 315px;
}
ul.NewAccount h2,
ul.LinkAccount h2 {
	padding-left: 36px !important;
	background: url('images/dashboard-sprites.png') 0 -542px no-repeat;
}
ul.LinkAccount h2 {
	padding-left: 84px !important;
	background-position: 45px -296px;
}
body#dashboard_entry_handshake div.Info {
	border: 1px solid #A5D0E7;
	background: #D3F0FF;
	color: #02475A;
}
body#dashboard_entry_handshake #Content h2 {
   border: none;
   color: #02475A;
   font-size:140%;
   font-weight:bold;
   padding: 6px 0;
	margin: 0;
	text-align: left;
}


/* Leaving Page */
body#dashboard_entry_leave p {
	margin: 0;
   padding: 20px 10px;
}
body#dashboard_entry_leave p.Leaving {
   background: url('images/progress.gif') left center no-repeat;
	margin: 0 0 0 14px;
   padding: 20px 0 20px 50px;
}



/* External App Connect Designs */
div.Connect h1,
div.Connect h2 {
	text-align: left;
}

div.ConnectInfo {
	margin: 10px 0 0;
	position: relative;
}
div.ConnectInfo img {
	position: absolute;
	height: 36px;
	width: 36px;
	top: 0;
	left: 0;
}
div.ConnectInfo span.Name {
	padding-left: 46px;
	font-weight: bold;
	line-height: 1;
	font-size: 13px;
	color: #444;
	display: block;
}
div.ConnectInfo h3 {
	font-family: 'lucida grande','Lucida Sans Unicode', tahoma, sans-serif;
	font-size: 15px;
	font-weight: bold;
	line-height: 1.6;
	color: #333;
	padding: 0 0 10px 46px;
	border: none;
}
div.Connect form ul li label,
div.SignInPopup form ul li label,
body#dashboard_entry_password form ul li label,
body#dashboard_entry_signin form ul li label,
body#dashboard_entry_index form ul li label {
	font-size: 13px;
	line-height: 1.5;
	padding: 0;
}
div.Connect form ul li#ConnectPassword label,
div.SignInPopup form ul li#ConnectPassword label {
	padding: 10px 0 0;
}
div.Connect .FinePrint,
div.SignInPopup .FinePrint {
	font-size: 11px;
	color: #777;
}
body#dashboard_entry_password input.InputBox,
body#dashboard_entry_signin input.InputBox,
body#dashboard_entry_index input.InputBox,
div.Connect input.InputBox,
div.SignInPopup input.InputBox {
	padding: 3px
}
div.Connect .ExistingUsername,
div.SignInPopup .ExistingUsername {
	font-weight: bold;
	line-height: 1;
	font-size: 13px;
	color: #000;
	display: block;
}


/* Do not customize these unless you enjoy pain. */

/* Error messages that get displayed on forms throughout the application. */
div.Errors {
   text-align: left;
   position: inherit;
   top: auto;
   left: auto;
   z-index: auto;
	margin: 0 0 10px !important;
}
* html div.Errors {
  position: inherit;
  width: auto;
  top: auto;
  left: auto;
  overflow: auto; 
}
div.Errors ul {
	border: 1px solid #a00 !important;
   background: #d50a0a !important;
	padding: 6px 10px;
	display: block;
   border-radius: 2px;
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	box-shadow: none;
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
}
div.Errors ul li {
   color: #fff !important;
   background: #d50a0a !important;
	text-align: left;
}
div.Popup div.Errors ul {
	display: block;
   border-radius: 2px;
	-moz-border-radius: 2px;
	-webkit-border-radius: 2px;
	box-shadow: none;
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
	border: 1px solid #a00 !important;
}
div.Popup div.Errors {
   text-align: left;
   position: inherit;
   top: auto;
   left: auto;
   z-index: auto;
	margin: 10px 0 !important;
}
div.Errors pre {
	margin: 10px 0 5px;
	padding: 4px 8px;
	display: block;
   border-radius: 2px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   white-space: pre;
   overflow: auto;
	box-shadow: 0px 0px 2px #333;
	-moz-box-shadow: 0px 0px 2px #333;
	-webkit-box-shadow: 0px 0px 2px #333;  
}

div.Errors pre,
div.Errors pre * {
	background: #ffa !important;
	font-size: 12px !important;
	font-weight: normal !important;
	font-family: monospace !important;
	text-shadow: none !important;
	color: #333  !important;
	line-height: 1.4 !important;
}
div.Errors pre * {
	margin: 0 !important;
	padding: 0 !important;
}


/* Note: InformMessages are "growl" style messages that appear in a fixed
position on the page to notify users of things like drafts being saved, etc. */
div.InformMessages {
   text-align: left !important;
   position: fixed;
   top: auto;
   bottom: 20px;
   left: 20px;
   z-index: 200;
   margin: 0 !important;
   padding: 0 !important;
   list-style: none !important;
   font-size: 12px;
   display: block;
   width: auto;
}
* html div.InformMessages {
  position: absolute;
  width: 100%;/*IE5.5*/
  top: auto;
  left: 20px;
  overflow: visible; 
  bottom: expression(eval(document.compatMode && document.compatMode=='CSS1Compat') ? documentElement.scrollBottom : document.body.scrollBottom);
}
div.InformMessages div.InformWrapper {
	display: block;
}
div.InformMessages div.InformMessage {
   color: #fff !important;
	text-shadow: 0 1px 1px #000;
   text-align: left !important;
   border-radius: 2px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
	background: rgb(0, 0, 0) !important;
	background: rgba(0, 0, 0, 0.7) !important;
   border: none !important;
   width: auto !important;
	max-width: 400px !important;
   margin: 10px auto 0 !important;
   padding: 9px 14px 8px !important;
   display:-moz-inline-stack;
   display:inline-block;
   zoom:1;
   *display:inline;
	position: relative;
	line-height: 1.6;
}
div.InformMessages div.InformMessage:hover {
	background: rgba(0, 0, 0, 0.8) !important;
}
div.InformMessages div.InformMessage a {
	color: #aff;
}
/* ... */

